# DesignGUI

./: .cursorrules  .gitignore  .prompts.md  CHANGELOG.md  CONTRIBUTING.md  DESIGNGUI_INSTRUCTIONS.md  LICENSE  README.md  implementation_plan.md  main.py  out.txt  pyproject.toml  pytest_results.txt
.designgui/: config.json
.designgui/commands/: screen.md  section.md  shell.md  vision.md
designgui/: __init__.py  cli.py  server.py
designgui/locale/: en.json
designgui/ui_lib/: __init__.py  base.py  composites.py  display.py  feedback.py  inputs.py  layout.py  primitives.py
nice_design/: cli.py  server.py
nice_design/ui_lib/: primitives.py
production_app/: main.py
tests/: test_edge_export.py  test_enterprise_daemon.py  test_smoke.py
