[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nice-design-os"
version = "0.1.0"
description = "Python Design OS - 100% custom Tailwind-driven UI library and Live Preview engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nicegui>=1.4.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0"
]

[project.scripts]
nice-design = "nice_design.cli:app"
