[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "designgui"
version = "0.1.0"
description = "Python Design OS - 100% custom Tailwind-driven UI library and Live Preview engine"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Zeeshan Ahmed", email="ayaanahmed11@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["nicegui", "ui", "tailwind", "design", "ai", "llm", "prototype"]
dependencies = [
    "nicegui>=1.4.0",
    "typer>=0.9.0",
    "watchdog>=3.0.0"
]


[project.urls]
"Homepage" = "https://github.com/ZeeshanAhmed/designgui"
"Bug Tracker" = "https://github.com/ZeeshanAhmed/designgui/issues"

[project.scripts]
designgui = "designgui.cli:app"

[tool.setuptools.packages.find]
include = ["designgui", "designgui.*"]
exclude = ["product*", "production_app*", "venv*"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio", "mypy", "httpx>=0.24.0"]
agents = ["pydantic>=2.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
